# Classification_CNN_2D_mlops

./: .gitignore  Makefile  README.md  app.py  docker-compose.yml  main.py  master.md  master_v2.md  pyproject.toml  requirements.txt  setup.py  template.py  train.py
Planning/: Project Structure.md
aws/: GUIDELINES.md
aws/ec2-scripts/: deploy.sh  setup_ec2.sh
config/: config.yaml
docker/: Dockerfile  Dockerfile.dev
docs/: api_docs.md  architecture.md
k8s/: GUIDELINES.md
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
notebooks/: Solar_Panel_Classification.ipynb
research/: 10_Data Pipeline - Dataset and Data Loading.md  11_Utilities - Logger, Metrics, Config  12_Monitoring and Drift Detection.md  13_Configuration Files.md  15_Create __init__.py files for all Python packages.md  18_Create a comprehensive project summary and tree view.md  1_Main Project.md  2_GitHub Actions CI CD Pipeline.md  3_Docker Files.md  4_Kubernetes Manifests.md  5_Terraform Infrastructure for AWS.md  6_Python Source Code - Model Architecture  7_Training Pipeline.md  8._FastAPI Inference Service.md  9_Streamlit Application.md  CNN Image Classification Template.md  Complete Execution Guide for CNN MLOps Project.md  Project Structure.md
src/api/: main.py
src/solar_panel_classifier/: __init__.py  config.py  data_loader.py  predictor.py
streamlit_app/: main.py
terraform/: GUIDELINES.md  main.tf  outputs.tf  providers.tf  user_data.sh  variables.tf
tests/integration/: test_api.py
(+13 files in other folders)
