[project]
name = "solar-panel-classifier"
version = "0.1.0"
description = "2D CNN-based image classification for solar panel condition monitoring."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Krish AI Projects"}
]
keywords = ["deep-learning", "cnn", "solar-panel", "classification", "tensorflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "streamlit>=1.30.0",
    "tensorflow>=2.16.0",
    "matplotlib>=3.8.0",
    "keras-tuner>=1.4.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
solar-panel-classifier = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
